--- a/Yodl-iOS/Podfile
+++ b/Yodl-iOS/Podfile
@@ -6,7 +6,8 @@ target 'Yodl' do
   use_frameworks!
 
   # Pods for Yodl
-
+  pod 'AudioKit', '~> 4.0'
+  pod 'Socket.IO-Client-Swift', '~> 15.2.0'
   target 'YodlTests' do
     inherit! :search_paths
     # Pods for testing
