added start script

--- a/YodlChat/package.json
+++ b/YodlChat/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "main": "app.js",
   "license": "MIT",
+  "scripts": {
+    "start": "node app.js"
+  },
   "dependencies": {
     "express": "^4.17.1",
     "randomstring": "^1.1.5",
